test/invalid/idl/no-semicolon-operation.widl
interface Waka {
  void miya()
  void eve()
}
